
Low Prio:
---------
CHANGE: Update Velocity reference to latest release
ADD: Comment all Facade methods and mention the "why" and "how"
CHANGE: Convert Javascripts to Script#

Version 2.7.5
=============
CHANGE: Changed the jQuery Microtemplate framework to John Resig's implementation.
FIX: Project Reference to AspectF was incorrect. Fixed.

Version 2.7.4
=============
FIX: Fix AspectF project reference in VS 2010 solution.

Version 2.7.3
=============
ADD: Flickr widget shows better quality image when user hovers on the image.
FIX: Removing WCF REST Starter kit usage because it's causing trouble with WebPI and WebMatrix.
CHANGE: Changed the setup message which will inform user to install WCF REST Starter Kit.
CHANGE: Turn on Page Request Validation in Default.aspx because HTMLWidget has been changed to not submit raw html
FIX: HtmlEditorWidget no longer submits raw html
ADD: HtmlEditorWidget now has a WYSIWYG editor.
FIX: RegisterWidgetScript is registering only one script. 
CHANGE: In FastFlickr, Implement http://www.sohtanaka.com/web-design/fancy-thumbnail-hover-effect-w-jquery

Version 2.7.2
=============
FIX: Dropthings made WebMatrix compatible. Dropthings now supports .NET 4 and thus WebMatrix works.

Version 2.6.8
=============
ADD: Manage Account page needs to be restored.
FIX: FastRss widget not showing less than 10 feeds.

Version 2.6.7
=============
FIX: Silverlight widget needs to resolve the webservice URL dynamically
CHANGE: Replace the ASMX webservices with WCF services with both REST and AJAX support
FIX: My blog feed sometimes fails to load.
FIX: ASMXAjaxHandler rejects request if the expected content type is xml. It needs to support xml.
FIX: Flickr widget does not allow setting "Most Interesting" picture as an option.
FIX: Digg widget no longer working. It can't read Digg stories directly from Digg.
ADD: Code and production site installer using Microsoft Web Platform installer

Version 2.6.6
=============